--- a/src/styles/Videos.module.css
+++ b/src/styles/Videos.module.css
@@ -1,4 +1,4 @@
-.videos {
+/* .videos {
   width: 100%;
   display: grid;
   margin: 3rem auto;
@@ -10,6 +10,21 @@
 
 @media only screen and (max-width: 600px) {
   .videos {
+    width: 90%;
+  }
+} */
+.infinite-scroll-component {
+  width: 100%;
+  display: grid;
+  margin: 3rem auto;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  justify-items: center;
+  gap: 20px;
+  row-gap: 20px;
+}
+
+@media only screen and (max-width: 600px) {
+  .infinite-scroll-component {
     width: 90%;
   }
 }
