--- a/src/styles/MiniPlayer.module.css
+++ b/src/styles/MiniPlayer.module.css
@@ -16,6 +16,12 @@
   object-fit: cover;
   animation: miniplayerAnim 0.3s ease forwards;
 }
+.miniPlayer .player {
+  width: 300px;
+  aspect-ratio: 16 / 9;
+  object-fit: cover;
+  animation: miniplayerAnim 0.3s ease forwards;
+}
 
 .miniPlayer .open {
   display: none;
