--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -54,7 +54,10 @@ h4 {
   grid-template-columns: 1fr 1fr;
   gap: 1rem;
 }
-
+.footer{
+  text-align: center;
+  color: #002333;
+}
 @media only screen and (max-width: 1023px) {
   .column {
     grid-template-columns: 1fr;
